WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293157
StyleExtractor is missing a heap allocator declaration
https://bugs.webkit.org/show_bug.cgi?id=293157
Summary
StyleExtractor is missing a heap allocator declaration
Vassili Bykov
Reported
2025-05-16 16:23:41 PDT
The recently introduced Style::Extractor class is marked as WTF_MAKE_FAST_ALLOCATED_WITH_HEAP_IDENTIFIER but is a missing the corresponding DECLARE_ALLOCATOR_WITH_HEAP_IDENTIFIER. This causes a build failure if ENABLE_MALLOC_HEAP_BREAKDOWN is on.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-16 16:30:48 PDT
<
rdar://problem/151494569
>
Vassili Bykov
Comment 2
2025-05-16 16:34:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45525
EWS
Comment 3
2025-05-16 17:57:09 PDT
Committed
295047@main
(e6324a21f29f): <
https://commits.webkit.org/295047@main
> Reviewed commits have been landed. Closing PR #45525 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug