StyleExtractor is missing a heap allocator declaration https://bugs.webkit.org/show_bug.cgi?id=293157 rdar://151494569

Reviewed by Abrar Rahman Protyasha.

The Style::Extractor class is WTF_MAKE_FAST_ALLOCATED_WITH_HEAP_IDENTIFIER and needs a heap
allocator declaration. The patch adds it.

Canonical link: https://commits.webkit.org/295047@main