Source/WebCore/style/StyleExtractor.h
@@ -50,6 +50,7 @@ struct SerializationContext;
 
 namespace Style {
 
+DECLARE_ALLOCATOR_WITH_HEAP_IDENTIFIER(Extractor);
 class Extractor {
 public:
     WTF_MAKE_FAST_ALLOCATED_WITH_HEAP_IDENTIFIER(Extractor);
